k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-demo
spec:
  selector:
    app: ws-demo
  ports:
    - port: 3000
      targetPort: 3000
